--- a/VidioTestCase/Feature/HomePage/Controller/HomeViewController.xib
+++ b/VidioTestCase/Feature/HomePage/Controller/HomeViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModule="VidioTestCase" customModuleProvider="target">
             <connections>
+                <outlet property="homeCollectionView" destination="7Hr-n0-eN9" id="gtS-xs-zr6"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -17,8 +18,26 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="7Hr-n0-eN9">
+                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="rvn-fd-4ma">
+                        <size key="itemSize" width="128" height="128"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="7Hr-n0-eN9" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="TaG-1d-e9g"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="7Hr-n0-eN9" secondAttribute="trailing" id="UxM-zl-jLn"/>
+                <constraint firstItem="7Hr-n0-eN9" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="bMR-yZ-Fwu"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="7Hr-n0-eN9" secondAttribute="bottom" id="rYo-Cs-20t"/>
+            </constraints>
             <point key="canvasLocation" x="139" y="130"/>
         </view>
     </objects>
